# open-tribesim

./: Cargo.toml  README.md
examples/: cfg.json
sql/clickhouse/: 0000_init.sql
sql/mysql/: 0000_init.sql
src/: lib.rs  main.rs  utils.rs
src/api/: api_server.rs  mod.rs  model.rs
src/cli/: args.rs
src/config/: config.rs  file.rs
src/db/: clickhouse_client.rs  mod.rs  mysql_client.rs
src/model/: culture.rs  distribution.rs  mod.rs  population.rs  reproduction.rs
src/runtime/: mod.rs  run_sim.rs  statistics.rs
src/simulation/: agent.rs  group.rs  memetics.rs  mod.rs
