[package]
name = "tribesim"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = { version = "0.12.2", features = ["inserter"] }
rand = "0.8"
#rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
rayon = "1.10.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
